<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6eeea"
    android:paddingTop="10dp"
    tools:context=".fragments.home_Fragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/homeprofile_id"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/profile_img" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:src="@drawable/notifications_icon" />

    <TextView
        android:id="@+id/t_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeprofile_id"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:text="@string/its_time_to_plant_something_new"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t_id"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:elevation="3dp" />

    <LinearLayout
        android:id="@+id/linerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchView_id"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"

            >

            <LinearLayout
                android:id="@+id/card1plants_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/img"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plants"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2flowers_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="2dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/flowers_img"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/flowers"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3gardening_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/gardenindimg"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gardening"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card4pots_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/pots"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pots"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linerlayout"

        />

</RelativeLayout>